std-11-iternovoi/module4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-cdn
  annotations:
    cert-manager.io/cluster-issuer: "http01-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx-cdn-user70vkgdhn6wtk2d8.k8prac.praktikum-services.tech
      secretName: nginx-cdn--secret
  rules:
    - host: nginx-cdn-user70vkgdhn6wtk2d8.k8prac.praktikum-services.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-cdn-service
                port:
                  number: 80
